<resources>
    <string name="app_name">知应</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="loading">加载中...</string>
    <string name="submitting">提交中…</string>
    <string name="operation_success">操作成功</string>
    <string name="network_error">似乎已断开与互联网的链接</string>

    <string name="login">登录</string>
    <string name="phone_num">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="prompt">未注册过的手机号将自动注册为知应用户</string>
    <string name="agreement">注册表明您同意知应用户协议</string>
    <string name="weixin_login_text">微信快速登录</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_prompt">或者，您可以</string>
    <string name="publish_title">我想问</string>
    <string name="hint_publish_title">一句话概括想问的问题</string>
    <string name="hint_publish_describe">说一说具体的问题信息，清楚明确的描述更容易获得答案</string>
    <string name="describe">描述</string>
    <string name="anonymity">匿名</string>
    <string name="publish">发布</string>
    <string name="share_weixin">分享到微信朋友圈</string>
    <string name="logoff">退出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_nick">输入昵称</string>
    <string name="hint_feedback">请输入反馈意见</string>

    <string name="browse_web">查看网页</string>
    <string name="help">帮助</string>
    <string name="settings">设置</string>
    <string name="quit">退出</string>
    <string name="string_help_text">当前应用缺少必要权限。\n请点击"设置"-"权限"打开所需权限。\n最后点击两次后退按钮，即可返回。</string>

    <string name="ask_again">请给予应用必要权限，让程序可正常工作。</string>
    <string name="cancel">取消</string>

    <string name="ask">要允许知应电话权限吗？</string>
    <string name="answer_question_btn">立即回答</string>

    <string name="my_question">我的提问</string>
    <string name="my_answer">我的回答</string>
    <string name="my_wallet">我的红包</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>

    <string name="all">全部</string>
    <string name="no_result">未解答</string>
    <string name="get_money">获得红包</string>

    <string name="time_limit">剩余%1$s，已有%2$d人回答，回答被选中者可获得红包</string>

    <string name="completed">已完成</string>
    <string name="complete">完成</string>

    <string name="anonymity_question">匿名提问</string>
    <string name="wallet">红包</string>
    <string name="sdcard_not_connected">SD卡未连接</string>
    <string name="latest_image">最近照片</string>
    <string name="select_album">选择相册</string>
    <string name="photo_album">相册</string>
    <string name="confirm">确定</string>
    <string name="no_photo_chosen">没有图片被选中</string>
    <string name="hint">提示</string>
    <string name="delete_pic_hint">确定要删除这张照片吗？</string>
    <string name="login_download_pic">请登录后使用下载图片功能</string>
    <string name="save_image_success">图片保存成功</string>
    <string name="net_work_error">网络出现问题</string>
    <string name="chosen_photo_invalid">所选照片无效，请检查或重新选择</string>
    <string name="order_false">支付失败</string>

    <string name="publish_success">发布成功</string>
    <string name="picture_option">图片选项</string>
    <string name="crop_pick_error">无可用图片</string>
    <string name="crop__saving">载入中…</string>
    <string name="crop__wait">请等待…</string>

    <string name="crop__control">管理</string>
    <string name="crop__done">完成</string>
    <string name="crop__cancel">取消</string>
    <string name="edit_nick">编辑昵称</string>
    <string name="nick_limit">昵称不能超过10个字符</string>
    <string name="input_hint">请输入回答</string>
    <string name="content_not_null">内容不能为空</string>
</resources>
