<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.azging.ging.view.PublishQuestionActivity">

    <include layout="@layout/header_title"/>

    <LinearLayout
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/header_view"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/publish_title"
            android:textColor="@color/ging_orange"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/ed_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:gravity="center_vertical"
            android:hint="@string/hint_publish_title"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray"
            android:textCursorDrawable="@null"
            android:textSize="14sp"/>
    </LinearLayout>

    <View
        style="@style/break_line_gray"
        android:layout_below="@+id/title_view"/>

    <RelativeLayout
        android:id="@+id/describe_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_view"
        android:background="@color/white"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/publish_describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/describe"
            android:textColor="@color/ging_orange"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/ed_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@+id/publish_describe"
            android:cursorVisible="true"
            android:gravity="left|top"
            android:hint="@string/hint_publish_describe"
            android:inputType="textMultiLine"
            android:maxLength="280"
            android:minLines="6"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="12sp"/>


        <LinearLayout
            android:id="@+id/add_img_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ed_describe"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/add_img"/>

            <ImageView
                android:id="@+id/add_img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                tools:src="@mipmap/ic_launcher_round"/>

            <ImageView
                android:id="@+id/add_img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                tools:src="@mipmap/ic_launcher_round"/>

        </LinearLayout>


        <TextView
            android:id="@+id/length_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ed_describe"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            tools:text="0/280"/>
    </RelativeLayout>

    <View
        style="@style/break_line_gray"
        android:layout_below="@+id/describe_view"
        android:layout_marginTop="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/describe_view"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <include
            android:id="@+id/reward_view"
            layout="@layout/row_list_accessible"/>

        <View style="@style/break_line_gray"/>

        <include
            android:id="@+id/anonymous_view"
            layout="@layout/row_list_with_switch"/>

        <View style="@style/break_line_gray"/>
    </LinearLayout>

    <TextView
        android:id="@+id/publish_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/publish"/>
</RelativeLayout>
